--- a/index.html
+++ b/index.html
@@ -30,7 +30,7 @@
     <meta content='en_GB' property='og:locale:alternate'/>
     <meta content='id_IN' property='og:locale:alternate'/>
 
-    <base href="/"></base>
+    <!-- <base href="/"></base> -->
 
     <link href='assets/css/bootstrap.min.css' rel='stylesheet' />
     <link href='assets/css/style.css' rel='stylesheet' />
