--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     <!-- <base href="/"></base> -->
 
     <link href='assets/css/bootstrap.min.css' rel='stylesheet' />
-    <link href='assets/css/style.css' rel='stylesheet' />
+    <link href='assets/css/style.min.css' rel='stylesheet' />
     <link href='assets/css/stars.css' rel='stylesheet' />
     <link href='https://fonts.googleapis.com/css?family=Satisfy|Roboto:400,300,700' rel='stylesheet' type='text/css'/>
 
