--- a/end.html
+++ b/end.html
@@ -7,6 +7,32 @@
 		<link href="./JECRC Renaissance 2016 _ Endeavour Events_files/bootstrap.min.css" rel="stylesheet">
 		<link href="./JECRC Renaissance 2016 _ Endeavour Events_files/style.min.css" rel="stylesheet">
 	 <style>
+	 @font-face {
+	     font-family: handycheera;
+	     src: url(event/assests/fonts/handy_cheera.woff);
+	 }
+	 @font-face {
+	     font-family: hobo;
+	     src: url(event/assests/fonts/hobo.woff);
+	 }
+	 @font-face {
+	     font-family: nueva;
+	     src: url(event/assests/fonts/nueva.woff);
+	 }
+	 .inner-bar h2 {
+	     color: #4c4949;
+	     font-family: hobo;
+	     font-size: 1.3em;
+	     font-weight: bold;
+	     letter-spacing: 2px;
+	 }
+	 .inner-bar h3 {
+	     color: rgba(53, 55, 55, 0.9);
+	     font-family: handycheera;
+	     font-size: 1.3em;
+	     margin: 0;
+	     margin-top: 5px;
+	 }
 	 	body {
 			background: url('img/site/background.png');
 
@@ -34,14 +60,14 @@
 	 left:780px;
 
 	 }
-	 
+
 	 .layout{
-	 
+
 	  margin-top:100px;
 	  margin-left:250px;
 	 }
 	 @media only screen and (max-width:1340px){
-	
+
 	 .full{
 	 position:fixed;
 	 top:-5px;
@@ -49,15 +75,15 @@
 
 	 }
 	 .layout{
-	 
+
 	  margin-top:35px;
 	  margin-left:80px;
 	 }
-	 
-	 
-	 
+
+
+
 	 }
-	 
+
 	 </style>
 	</head>
 
