Social Icon In New Tab

--- a/end.html
+++ b/end.html
@@ -9,15 +9,15 @@
 	 <style>
 	 @font-face {
 	     font-family: handycheera;
-	     src: url(event/assests/fonts/handy_cheera.woff);
+	     src: url(event/assets/fonts/handy_cheera.woff);
 	 }
 	 @font-face {
 	     font-family: hobo;
-	     src: url(event/assests/fonts/hobo.woff);
+	     src: url(event/assets/fonts/hobo.woff);
 	 }
 	 @font-face {
 	     font-family: nueva;
-	     src: url(event/assests/fonts/nueva.woff);
+	     src: url(event/assets/fonts/nueva.woff);
 	 }
 	 .inner-bar h2 {
 	     color: #4c4949;
