--- a/index.html
+++ b/index.html
@@ -238,25 +238,25 @@ alert("Mobile view comming soon.");
   </div>
 
   <div class="jumbotron">
-		<a href="https://www.facebook.com/jecrcrenaissance/">
+		<a href="https://www.facebook.com/jecrcrenaissance/" target="_blank">
    <img src="vectors ren 17/social media-05.png" id="maze13"  class="icon11 mico"   />
  </a>
   </div>
 
   <div class="jumbotron">
-		<a href="https://www.instagram.com/jecrcrenaissance/">
+		<a href="https://www.instagram.com/jecrcrenaissance/" target="_blank">
    <img src="vectors ren 17/social media-06.png" id="maze14"  class="icon12 mico"   />
  </a>
   </div>
 
   <div class="jumbotron">
-			<a href="https://www.youtube.com/playlist?list=PLysWb02uCSoP0aw_qkXlW1eqaZocn8Sml">
+			<a href="https://www.youtube.com/playlist?list=PLysWb02uCSoP0aw_qkXlW1eqaZocn8Sml" target="_blank">
    <img src="vectors ren 17/social media-07.png" id="maze15"  class="icon13 mico"   />
  </a>
   </div>
 
   <div class="jumbotron">
-			<a href="https://twitter.com/renjecrc">
+			<a href="https://twitter.com/renjecrc" target="_blank">
    <img src="vectors ren 17/social media-04.png" id="maze16"  class="icon14 mico"   />
  </a>
   </div>
