Switch To Update Minified Version Of Three.js

--- a/index.html
+++ b/index.html
@@ -484,7 +484,7 @@ toggleit();
 																);
 </script>
   <script src="js/renderers/Projector.js"></script>
-<script src="build/three.js"></script>
+<script src="build/three.min.js"></script>
 <script src='rennai/threex.domevent.js'></script>
 <script src="js/renderers/CanvasRenderer.js"></script>
 <div class="duniya">
