--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ alert("Mobile view comming soon.");
 -->
 
     <div class="jumbotron">
-			<a id='a' href='end.html'>
+			<a id='a' href='event/#/events/endeavour'>
    <img src="vectors ren 17/final poster ren 17-34.png" id="maze4" class=" icon2 mico"   />
 </a>
 
