--- a/mobile.html
+++ b/mobile.html
@@ -97,22 +97,22 @@
             </div>
             <div>
             <div class="social_media">
-             <a href="https://www.facebook.com/jecrcrenaissance/" rel="_blank">
+             <a href="https://www.facebook.com/jecrcrenaissance/" target="_blank">
               <div class="ren_facebook_button ren_share_circle">
                 <i class="fa fa-facebook" aria-hidden="true"></i>
               </div>
               </a>
-              <a href="https://twitter.com/renjecrc" rel="_blank">
+              <a href="https://twitter.com/renjecrc" target="_blank">
               <div class="ren_twitter_button ren_share_circle">
                 <i class="fa fa-twitter" aria-hidden="true"></i>
               </div>
               </a>
-              <a href="https://www.youtube.com/TheJECRCRenaissance" rel="_blank">
+              <a href="https://www.youtube.com/TheJECRCRenaissance" target="_blank">
               <div class="ren_youtube_button ren_share_circle">
                 <i class="fa fa-youtube" aria-hidden="true"></i>
               </div>
               </a>
-              <a href="https://www.instagram.com/jecrcrenaissance/" rel="_blank">
+              <a href="https://www.instagram.com/jecrcrenaissance/" target="_blank">
               <div class="ren_author_button ren_share_circle" style="margin-right: 0px;">
                 <i class="fa fa-instagram" aria-hidden="true"></i>
               </div>
