--- a/mobile.html
+++ b/mobile.html
@@ -68,11 +68,12 @@
           </div>
 
           <div class="container ren_focus_container">
-
+            <a href="http://jecrcrenaissance.in/event/index.html#/home">
             <div class="earth_menu_block">
               <div class="rotating_ren_earth">
               </div>
             </div>
+            </a>
 
             <div class="floating_banner"></div>
 
