--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@ var isFirefox = navigator.userAgent.toLowerCase().indexOf('firefox') > -1;
 if(isFirefox)
 {alert("Please update Firefox or switch to Google chrome.");}
 if( /Android|webOS|iPhone|iPad|iPod|BlackBerry/i.test(navigator.userAgent) ) {
-alert("Mobile view comming soon.");
+window.location = "http://www.jecrcrenaissance.in/mobile.html";
 }
 </script>
 
