--- a/index.html
+++ b/index.html
@@ -1,5 +1,11 @@
 <html>
-	<head>
+  <head>
+    <title>
+      JECRC Renaissance 2017
+    </title>
+    <meta charset="utf-8">
+    <meta content='Renaissance is a Techno-Cultural fest which provides a versatile platform for all the students to learn and explore the various dimensions of their personality.' name='description'/>
+    
 		<meta charset=utf-8>
 		<meta name="viewport" content="width=device-width, initial-scale=0.8, minimum-scale=0.8, maximum-scale=0.8">
             <link rel="stylesheet" type="text/css" href="component.css" />
