--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <meta content='Renaissance is a Techno-Cultural fest which provides a versatile platform for all the students to learn and explore the various dimensions of their personality.' name='description'/>
     
 		<meta charset=utf-8>
-		<meta name="viewport" content="width=device-width, initial-scale=0.8, minimum-scale=0.8, maximum-scale=0.8">
+		<!-- <meta name="viewport" content="width=device-width, initial-scale=0.8, minimum-scale=0.8, maximum-scale=0.8"> -->
             <link rel="stylesheet" type="text/css" href="component.css" />
       <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="animation.css">
@@ -28,13 +28,13 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
  height:250px;
  position:fixed;
  top:-350px;
- left:-900px;
+ left:-700px;
 
 }
  .fadelogo2{
  position:fixed;
  top:-350px;
- left:350px;
+ left:150px;
  width:500px;
  height:125px;
 }
@@ -42,7 +42,7 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
 .fadelogo3{
  position:fixed;
  top:-250px;
- left:420px;
+ left:220px;
  width:350px;
  height:85px;
 }
