--- a/index.html
+++ b/index.html
@@ -7,8 +7,7 @@
     <meta content='Renaissance is a Techno-Cultural fest which provides a versatile platform for all the students to learn and explore the various dimensions of their personality.' name='description'/>
     
 		<meta charset=utf-8>
-		<!-- <meta name="viewport" content="width=device-width, initial-scale=0.8, minimum-scale=0.8, maximum-scale=0.8"> -->
-            <link rel="stylesheet" type="text/css" href="component.css" />
+		   <link rel="stylesheet" type="text/css" href="component.css" />
       <link rel="stylesheet" href="home.css">
     <link rel="stylesheet" href="animation.css">
 
@@ -33,7 +32,7 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
 }
  .fadelogo2{
  position:fixed;
- top:-350px;
+ top:-330px;
  left:150px;
  width:500px;
  height:125px;
@@ -50,7 +49,7 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
  width:500px;
  height:250px;
  display:none;
- margin-top:125%;
+ margin-top:124.5%;
  margin-left:-1.5%;
 }
  @media only screen and (max-width:1340px){
@@ -177,22 +176,7 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
 			-webkit-animation-delay: 1s;"  />
 	   </div>
 
-<!--
-<div class="jumbotron">
-	<div class="hi-icon-wrap hi-icon-effect-4 hi-icon-effect-4b" >
- <a href="#" class="hi-icon hi-icon-archive" id="maze3" >
-   <img src="vectors ren 17/final poster ren 17-17.png" id="maze3"  class="icon1 mico" onclick="toggleit"/></a>
-  </div>
-</div>
--->
 
-<!--
-<div class="jumbotron">
-	 <a id='a' href='event/index.html#/events/zarurat'>
- <img src="vectors ren 17/final poster ren 17-17.png" id="maze3"  class=" icon1 mico" />
- </a>
- </div>
--->
 
     <div class="jumbotron">
 			<a id='a' href='event/#/events/endeavour'>
@@ -207,9 +191,12 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
 
   </div>
   <div class="jumbotron">
-		<a href="coming.html">
-   <img src="vectors ren 17/final poster ren 17-21.png" id="maze6" class=" icon4 mico"  />
-    </a>
+  
+		<a href="event/index.html#/events/splash">
+		
+		<img src="vectors ren 17/final poster ren 17-21.png" id="maze6" class=" icon4 mico"  />
+		
+		</a>
   </div>
 
    <div class="jumbotron">
@@ -243,7 +230,7 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
   </div>
 
   <div class="jumbotron">
-		<a href="">
+		<a href="event/index.html#/sponsors">
    <img src="vectors ren 17/sponsor-02.png" id="maze12"  class="icon10 mico"   />
  </a>
   </div>
