--- a/index.html
+++ b/index.html
@@ -261,7 +261,7 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
 
 
   <div class="jumbotron">
-			<a href="">
+			<a href="http://www.jecrcrenaissance.in/event/index.html#/events/itinerary">
    <img src="vectors ren 17/itinerary-01.png" id="maze17"  class="icon15 mico"   />
  </a>
   </div>
