--- a/index.html
+++ b/index.html
@@ -687,7 +687,7 @@ function webgl_detect(return_context)
     return false;
 }
 
-if(webgl_detect)
+if(webgl_detect())
 {globe();
 //$("#nakli").toggle();
 }
