--- a/index.html
+++ b/index.html
@@ -272,7 +272,7 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
 
 
   <div class="jumbotron">
-			<a href="coming.html">
+			<a href="http://tedxjecrc.com/">
    <img src="vectors ren 17/ted-27.png" id="maze18"  class="icon16 mico"   />
  </a>
   </div>
