--- a/index.html
+++ b/index.html
@@ -189,7 +189,7 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
 
   </div>
   <div class="jumbotron">
-		<a id='a' href='coming.html'>
+		<a id='a' href='event/index.html#/events/quanta'>
    <img src="vectors ren 17/final poster ren 17-31.png" id="maze5" class=" icon3 mico"  />
 </a>
 
