--- a/mobile.html
+++ b/mobile.html
@@ -47,7 +47,7 @@
           <div class="hot_balloon" id="hot_balloon"></div>
         </div>
       </div>
-      <div class="main_body">
+      <div class="main_body" style="z-index: 10;">
         <div class="row">
           <div class="container top_ren_container">
 
