--- a/mobile.html
+++ b/mobile.html
@@ -37,16 +37,17 @@
   </head>
   <body>
     <!--Content Starts-->
-    <div>
-    <div class="container-fluid">
-      <div class="animated_elements">
-        <div class="plane_container">
-          <div class="plane" id="plane1"></div>
-        </div>
-        <div class="hot_balloon_container">
-          <div class="hot_balloon" id="hot_balloon"></div>
-        </div>
+    <div class="animated_elements">
+      <div class="plane_container">
+        <div class="plane" id="plane1"></div>
       </div>
+      <div class="hot_balloon_container">
+        <div class="hot_balloon" id="hot_balloon"></div>
+      </div>
+    </div>
+    <div style="z-index:10px;">
+    <div class="container-fluid">
+
       <div class="main_body" style="z-index: 10;">
         <div class="row">
           <div class="container top_ren_container">
