Ribbon, Ininear Sppelling and Event Category Align

--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
     <div class="jumbotron">
      <img src="vectors ren 17/fake.png" class="animated infinite pulse" style="width:200px;height:200px;display:none;" id="nakli" onclick="whenclicked()"/>
     </div>
-    
+
 		<div class="plane_container">
 			<div class="plane" id="plane"></div>
 		</div>
@@ -101,23 +101,37 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
 		</div>
 		<div class="jumbotron">
 	   <img src="vectors ren 17/ribbon-01.png" id="ribbon" class="size_ribbon"/>
+
+    <h1 class="main-icons animated pulse"  id="splash" style="">~ Splash ~</h1>
+    <h1 class="main-icons animated pulse"  id="about" >~ About ~</h1>
+    <h1 class="main-icons animated pulse"  id="team" >~ Team ~</h1>
+    <h1 class="main-icons animated pulse"  id="gallery" >~ Gallery ~</h1>
+    <h1 class="main-icons animated pulse"  id="sponsors" >~ Sponsors ~</h1>
+    <h1 class="main-icons animated pulse"  id="support" >~ Support ~</h1>
+    <h1 class="main-icons animated pulse"  id="endeavour" >~ Endeavour ~</h1>
+    <h1 class="main-icons animated pulse"  id="quanta" >~ Quanta ~</h1>
+    <h1 class="main-icons animated pulse"  id="zarurat" >~ Zarurat ~</h1>
+    <h1 class="main-icons animated pulse"  id="alumni" >~ Alumni ~</h1>
+    <h1 class="main-icons animated pulse"  id="itnerary"   >~ Itnerary ~</h1>
+    <h1 class="main-icons animated pulse"  id="tedx"   >~ Tedx JECRC ~</h1>
+    <h1 class="main-icons animated pulse"  id="fb"    >~ Facebook ~</h1>
+    <h1 class="main-icons animated pulse"  id="insta"   >~ Instagram ~</h1>
+    <h1 class="main-icons animated pulse"  id="twitter"   >~ Twitter ~</h1>
+    <h1 class="main-icons animated pulse"  id="youtube"   >~ Youtube ~</h1>
 	  </div>
-		<h1 class=" main-icons animated pulse"  id="splash" >~ Splash ~</h1>
-		<h1 class=" main-icons animated pulse"  id="about" >~ About ~</h1>
-		<h1 class=" main-icons animated pulse"  id="team" >~ Team ~</h1>
-		<h1 class=" main-icons animated pulse"  id="gallery" >~ Gallery ~</h1>
-		<h1 class=" main-icons animated pulse"  id="sponsors" >~ Sponsors ~</h1>
-		<h1 class=" main-icons animated pulse"  id="support" >~ Support ~</h1>
-		<h1 class=" main-icons animated pulse"  id="endeavour" >~ Endeavour ~</h1>
-		<h1 class=" main-icons animated pulse"  id="quanta" >~ Quanta ~</h1>
-		<h1 class=" main-icons animated pulse"  id="zarurat" >~ Zarurat ~</h1>
-		<h1 class=" main-icons animated pulse"  id="alumni" >~ Alumni ~</h1>
-		<h1 class=" main-icons animated pulse"  id="itnerary"   >~ Itnerary ~</h1>
-		<h1 class=" main-icons animated pulse"  id="tedx"   >~ Tedx JECRC ~</h1>
-		<h1 class=" main-icons animated pulse"  id="fb"    >~ Facebook ~</h1>
-		<h1 class=" main-icons animated pulse"  id="insta"   >~ Instagram ~</h1>
-		<h1 class=" main-icons animated pulse"  id="twitter"   >~ Twitter ~</h1>
-		<h1 class=" main-icons animated pulse"  id="youtube"   >~ Youtube ~</h1>
+<style>
+@font-face {
+    font-family: hobo;
+    src: url(HoboStd.woff);
+}
+.main-icons{
+  position: absolute;
+  z-index: :40px;
+  margin-top: -12px;
+  margin-left: -55px;
+  font-family: hobo;
+}
+</style>
   <div class="jumbotron">
 
 	  <img src="vectors ren 17/final poster ren 17-03.png" class="log"  id="logoim">
