--- a/index.html
+++ b/index.html
@@ -112,7 +112,7 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
     <h1 class="main-icons animated pulse"  id="quanta" >~ Quanta ~</h1>
     <h1 class="main-icons animated pulse"  id="zarurat" >~ Zarurat ~</h1>
     <h1 class="main-icons animated pulse"  id="alumni" >~ Alumni ~</h1>
-    <h1 class="main-icons animated pulse"  id="itnerary"   >~ Itnerary ~</h1>
+    <h1 class="main-icons animated pulse"  id="itnerary"   >~ Itinerary ~</h1>
     <h1 class="main-icons animated pulse"  id="tedx"   >~ Tedx JECRC ~</h1>
     <h1 class="main-icons animated pulse"  id="fb"    >~ Facebook ~</h1>
     <h1 class="main-icons animated pulse"  id="insta"   >~ Instagram ~</h1>
