--- a/index.html
+++ b/index.html
@@ -124,11 +124,14 @@ window.location = "http://www.jecrcrenaissance.in/mobile.html";
     font-family: hobo;
     src: url(HoboStd.woff);
 }
+h1{
+  font-size: 20px;
+}
 .main-icons{
   position: absolute;
   z-index: :40px;
-  margin-top: -12px;
-  margin-left: -55px;
+  margin-top: 2px;
+  margin-left: -27px;
   font-family: hobo;
 }
 </style>
