UC Browser Mini Alert

--- a/mobile.html
+++ b/mobile.html
@@ -113,6 +113,12 @@
     </div>
     <!--Content Ends-->
     <!--Inline JS-->
+    
+    <script>
+     if (navigator.userAgent.match(/^Mozilla\/5\.0 .+ Gecko\/$/)) {
+    alert("Please Change To Standard Browser. Resources of the web pages might be geting interrupted in Browser with Speed Mode");
+    }
+    </script>
 
     <script src="mobile_assests/js/jquery.jrumble.1.3.min.js"></script>
   </body>
