--- a/index.html
+++ b/index.html
@@ -268,7 +268,7 @@ h1{
   </div>
 
   <div class="jumbotron">
-			<a href="https://www.youtube.com/playlist?list=PLysWb02uCSoP0aw_qkXlW1eqaZocn8Sml" target="_blank">
+			<a href="https://www.youtube.com/user/TheJECRCRenaissance" target="_blank">
    <img src="vectors ren 17/social media-07.png" id="maze15"  class="icon13 mico"   />
  </a>
   </div>
